# harness

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  k8s_plan.md  plan.md  pyproject.toml  run-job.sh  runHelm-job.sh  start.sh  startHelm.sh  stop.sh  stopHelm.sh
.beads/: issues.jsonl
.claude/hooks/: session-start.sh
docs/: copy_of_function_calling.md  mcp_servers.md  usage.md
harness/: __init__.py  __main__.py  agent.py  config.py  embedding.py  indexer.py  mcp_client.py  qdrant.py
harness-chart/: Chart.yaml  values.yaml
harness-chart/templates/: harness-configmap-ollama.yaml  harness-deployment.yaml  harness-pdb.yaml  harness-secret-contrast.yaml  jobs-output-pvc.yaml  ollama-deployment.yaml  ollama-pdb.yaml  ollama-pvc.yaml  ollama-service.yaml  qdrant-pdb.yaml  qdrant-service.yaml  qdrant-statefulset.yaml
harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
harness/tools/: __init__.py  base.py  search.py
k8s/: cheatsheet.md  namespace.yml
k8s/harness/: configmap-host-ollama.yml  configmap-k8s-ollama.yml  configmap.yml  deployment.yml  pdb.yml
k8s/jobs/: agent-job-template.yml  output-pvc.yml
k8s/ollama/: deployment.yml  pdb.yml  pvc.yml  service.yml
k8s/qdrant/: pdb.yml  service.yml  statefulset.yml
tests/: __init__.py  test_embedding.py  test_indexer.py  test_qdrant.py  test_search.py
